--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -136,25 +136,35 @@ table {
 
 /** end reset css**/
 body {
-	max-width: 1140px;
-	margin: auto;
+	max-width: 1440px;
+	background: #FFFEF8;
 	font-family: 'Work Sans';
 	font-size: 14px;
 }
 
+p, figcaption, label {
+	color: #3D3D3D;
+}
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	margin: 50px 0;
+	margin: 50px 9% 0 9%;
+}
+
+main {
+	margin: 2% 9% 0 9%;
 }
 
 section {
-	margin: 50px 0
+	margin: 120px 0;
+	padding: 0 60px;
 }
 
 h1 {
 	display: flex;
 	flex-direction: column;
+	row-gap: 9px;
 	font-family: 'Syne';
 	font-size: 22px;
 	font-weight: 800;
@@ -164,8 +174,9 @@ h1 {
 h1>span {
 	font-family: 'Work Sans';
 	font-size: 10px;
-	letter-spacing: 0.1em;
-	;
+	font-weight: 400;
+	letter-spacing: 0.05em;
+	
 }
 
 h2 {
@@ -178,8 +189,9 @@ h2 {
 nav ul {
 	display: flex;
 	align-items: center;
-	list-style-type: none;
-
+    justify-content: space-around;
+    list-style-type: none;
+    column-gap: 25px;
 }
 
 nav li {
@@ -191,23 +203,34 @@ li:hover {
 	color: #B1663C;
 }
 
+li img {
+	display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+	max-height: 1.3em;
+    width: auto;
+}
+
 #introduction {
 	display: flex;
 	align-items: center;
 }
 
 #introduction figure {
-	flex: 1
+	flex: 1;
+	margin-left: 25px;
 }
 
 #introduction img {
 	display: block;
-	margin: auto;
-	width: 80%;
+	max-width: 474px;
 }
 
 #introduction article {
-	flex: 1
+	flex: 1;
+	margin-left: 50px;
+	padding: 2px;
 }
 
 #introduction h2 {
@@ -216,25 +239,20 @@ li:hover {
 
 #introduction p {
 	margin-bottom: 0.5em;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
 }
 
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
-}
-
-.gallery {
-	width: 100%;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+	margin-bottom: 1.4em;
 }
 
 #Filtres {
 	display: flex;
 	justify-content: center;
-	column-gap: 0px;
+	margin-bottom: 0.8em;
 }
 
 #Filtres button {
@@ -243,11 +261,10 @@ li:hover {
 	height: auto;
 	font-size: 1.3em;
 	color: #1D6154;
-	background-color: white;
+	background-color: #FFFEF8;
 	border: 1.5px solid #1D6154;
 	margin: 1em 0.2em 3em 0.3em;
-	width: auto;
-	min-width: 8%;
+	min-width: 13%;
 	text-align: center;
 	border-radius: 60px;
 	padding: 10px 15px;
@@ -259,9 +276,29 @@ li:hover {
 	border: none;
 }
 
+.gallery {
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+}
+
 .gallery img {
 	width: 100%;
 
+}
+
+.gallery figcaption {
+	font-family: 'Work Sans';
+	font-size: 1em;
+	font-weight: 400;
+	margin-top: 9px;
+}
+
+#portfolio {
+	margin: 140px 0 90px 0;
+	padding: 0 60px;
 }
 
 #contact {
@@ -271,11 +308,14 @@ li:hover {
 
 #contact>* {
 	text-align: center;
-
 }
 
 #contact h2 {
 	margin-bottom: 20px;
+}
+
+#contact p {
+	font-size: 1.3em;
 }
 
 #contact form {
@@ -286,17 +326,21 @@ li:hover {
 }
 
 #contact input {
-	height: 50px;
-	font-size: 1.2em;
+	min-height: 51px;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
 #contact label {
-	margin: 2em 0 1em 0;
+	margin: 3em 0 0.6em 0;
+	font-family: 'Work Sans';
+	font-weight: 500;
+	font-size: 1.2em;
 }
 
 #contact textarea {
+	min-height: 20em;
+	margin-bottom: 35px;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
@@ -304,16 +348,36 @@ li:hover {
 input[type="submit"] {
 	font-family: 'Syne';
 	font-weight: 700;
+	font-size: 1.3em;
 	color: white;
 	background-color: #1D6154;
+	min-width: 50%;
 	margin: 2em auto;
-	width: 180px;
 	text-align: center;
 	border-radius: 60px;
 }
 
-footer nav ul {
+input#name, input#email {
+	min-height: 5em;
+	margin: 0
+}
+
+
+
+footer {
 	display: flex;
 	justify-content: flex-end;
+    align-items: center;
+    vertical-align: middle;
+	background: white;
+	margin-top: 50px;
+}
+
+footer nav {
+	font-size: 1em;
+	font-weight: 300px;
+	padding-right: 15px;
 	margin: 2em
 }
+
+
